see about us and other pages

--- a/Pages/3About nova/1Who we are/About Us Page.org
+++ b/Pages/3About nova/1Who we are/About Us Page.org
@@ -1,4 +1,6 @@
-Nova Name
+Nova XR is a team of artists and technicians programming new media.  Our specialty is XR (Extended Reality).  We develop from the 4th floor of the 1880's Beard Street Warehouses, in Brooklyn, New York.  
+
+"Nova" is latin for /new/, contrasting the future with fundamentals.   We chose the name because it is simple, versatile and expressive of our work to innovate media technologies.   
 
 Virtual Reality brings us to a place where the confines of the physical world can disapear. Time and gravity and our relationship with space have been as much a part of the human experience as our need for air. Now, as the architects of these virtual worlds, we breathe the same air while breaking free from physical measurements.
  
