--- a/Pages/1Solutions/2Services/1Consultation/1Consultative Services/000consultationintro_finalized.org
+++ b/Pages/1Solutions/2Services/1Consultation/1Consultative Services/000consultationintro_finalized.org
@@ -1,5 +1,6 @@
 
 
+# introduction
 
 We’ll help you understand, operate, integrate, and troubleshoot XR technologies.  The skills required to produce 3d virtual media (XR) are broad and deep, but we'll keep you focused.  By internalizing the basics of xr hardware and xr software you'll be familiar with why the latest technological breakthroughs and understand /why/ they are indeed /break-throughs/.
 
@@ -15,19 +16,13 @@ Learn about our
 
 : [ Education and Training Services] 
 
-# ^button
-# link to [[[[vrinstallationstext_finalized.org]]]]
+ ^button
+: link to [[[[vrinstallationstext_finalized.org]]]]
+
 For reccomended material, visit our 
 : [Resource Center]
-# ^button
-# link to [[[[vrinstallationstext_finalized.org]]]]
-
-
- 
-
-
-
-
+ ^button
+: link to [[[[vrinstallationstext_finalized.org]]]]
 
 Stay current on a spectrum of technologies that are intertwining 
 in the new era of augmented experiences.  
@@ -35,3 +30,4 @@ in the new era of augmented experiences.
 As mechanical and biological blend, we’ll keep the light 
 shining on programs that matter.  
 
+ 
