--- a/Pages/1Solutions/1Products/Productsintro_finalized.org
+++ b/Pages/1Solutions/1Products/Productsintro_finalized.org
@@ -1,3 +1,1 @@
-* Products
-
-We desgin products for businesses and artists.  We develop visual tools that simplify xr technology into intuitive design.  These interfaces, softwares a nd events are fundamental solutions for developing content, producing experiences and building virtual worlds.
+We simplify complex technologies into intuitive design.  Our designs are fundamental solutions for artists and businesses to develop content, produce XX and build virtual worlds.
