--- a/Pages/1Solutions/1Products/Productsintro_finalized.org
+++ b/Pages/1Solutions/1Products/Productsintro_finalized.org
@@ -1,1 +1,1 @@
-We simplify complex technologies into intuitive design.  Our designs are fundamental solutions for artists and businesses to develop content, produce XR and build virtual worlds.
+We simplify complex technologies into intuitive design.  These products are fundamental toolings for artists and businesses to create vr and ar content.
