--- a/Pages/1Solutions/1Products/Productsintro_finalized.org
+++ b/Pages/1Solutions/1Products/Productsintro_finalized.org
@@ -1,1 +1,1 @@
-We simplify complex technologies into intuitive design.  These products are fundamental toolings for artists and businesses to create vr and ar content.
+We develop intuitive designs.  The following products are powerful resources for artists and businesses to create and deploy virtual and augmented reality content.
