refreshing text for website

--- a/Pages/1Solutions/2Services/1Consultation/00consultation_finalize.org
+++ b/Pages/1Solutions/2Services/1Consultation/00consultation_finalize.org
@@ -1,7 +1,16 @@
 
 ** Consultation
 
-We’ll help you understand, operate, and troubleshoot XR technologies.  The skills required to produce 3d virtual media (XR) are broad and deep, but we'll keep you focused.  By internalizing the basics of xr hardware and xr software you'll be familiar with why the latest technological breakthroughs, and understand why they  are indeed breakthroughs.  With this, you'll innovative ways to improve your business that the competition is not yet equiped to think up themselves.   Arm yourself with knowledge and your business excel in this new wave of media technologies 
+
+
+
+We provide access to advance technologies.  We’ll help you understand, strategize and produce XR media.  Production services include design, development and deployment.   
+
+
+
+
+
+ The skills required to produce 3d virtual media (XR) are broad and deep, but we'll keep you focused.  By internalizing the basics of xr hardware and xr software you'll be familiar with why the latest technological breakthroughs, and understand why they  are indeed breakthroughs.  With this, you'll innovative ways to improve your business that the competition is not yet equiped to think up themselves.   Arm yourself with knowledge and your business excel in this new wave of media technologies 
 
 Only you can take the time to prepare yourself and you team to understand how and why to implament techologies such as XR (virtual/augmented reality) artificial inteliigence, robotics, block-chains /et cetera/.   We'd be glad to help.  
 
