--- a/0admin/febREVAMPlist.org
+++ b/0admin/febREVAMPlist.org
@@ -96,7 +96,13 @@
 
 - build XR designs
 - client dashboard design
-- 
+- form made
+
+** Nova XR 
+- find us text
+- integrate google maps
+- if i am on static page, like FIND US, how to i return to the Nova XR menu i just came from?
+- design application form
 
 
 ** generally
@@ -108,6 +114,7 @@
 - Exclusive Solutions Page
     + block style all our non-product products (NPPs)
 - Resources (PDF access to documents and research, with summaries about)... This section is a resource center for clients, so when they ask where they can be educated 1) we take them to our Solutions/Services/Production pages because we describe first hand and have original content there.  Second, we send them to a more coprehensive, NOVA LIBRARY OF INFORMATION, of sorts, which is here, the "resource center" where we had PDFs of White Papers, Big 4 Trend reports, academic journals, and so on.  We always comment on the read.  We never post something we didn't read, therefore commenting should be very very easy.  Building and maintianing this library will be of the minimum expecations. 
+- access to rent space/desk/photo shoot pages?
 
 
 ** Up Next
