blog and seo update

--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -271,3 +271,44 @@ virtual reality business strategy, xr financial strategy, vr return on investmen
 **              
 
 
+
+
+
+
+**  Title tags
+
+52 to 70 characters
+
+
+
+** Keyword search
+
+neuro marketing
+vr neuro marketing
+the brain on virtual reality
+neurological marketing
+
+
+naked truth about vr
+virtual Reality 
+
+new age marketing
+new media marketing
+xr-first
+vr-first
+ar-first
+
+xr production house
+vr production house
+
+xr creation
+XR 
+
+how to advertise in vr\
+books about virtual reaity marketing
+books about vr
+vr marketing for dummies
+vr marketing manager
+communications in vr
+crypto vr
+
