--- a/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
+++ b/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
@@ -1,46 +1,52 @@
 * Game Engine
 
 
+*** What is the technology
 
+A *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  Game engines enable us to provide you with all the features of the internet from social sharing to payment.  
+*** How the tech is used for VR
 
-A *game engine* is a software framework used to create interactive 3D media (XR).  We build XR in game engines.  
+Game engines equip developers to custom design virtual environments, program rules and netowrk experiences to be shared on personal computers, mobile dvices and gaming consules. Game engine framework's core functions are to render 3D graphics, engineer physics/collision (and response systems) manage memoreym shread, and graph scenes.   
 
-Game engines equip us to custom design virtual environments, program rules and netowrk experiences to be shared on personal computers, mobile dvices and gaming consules. Game engine framework's core functions are to render 3D graphics, engineer physics/collision (and response systems) manage memoreym shread, and graph scenes.   
+Nova economizes the process of virtual reality (XR) development by adapting game engine builds (software executable) to create new VR expereinces. 
 
-We economize the process of virtual reality (XR) development by adapting game engine builds to create new VR expereinces. 
+*** Why this matters (makes you money)
 
+By developing a project with this frame work, producers save time and money.   
 
-By developing your project in a game engine you save yourself time and money.   
+- This frame work is *Programmable* you can re-program your you content easily and often.  Year over year you will save 40% of development costs compared to producing video content.  
 
-- This frame work is *Programmable* you can re-program your you content easily and often.  
-- The media will be *interactive*.  Visitors will engage their environment, chage the world around them, and be a part of the story.
+- media will be *interactive*.  Visitors will engage their environment, chage the world around them, and be a part of the story.  This engagement drastically increases impact
+
+![Dale's Cone of Learning] (/Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Production/Develope/1Game Engine)
 
 - The experience is *netowrked* meaning it is connected to other real people. You and your friends will travel the customized worlds you design /together/.
 
 - The visitor will have a *visceral* expereince, because game engines can create life-like simulations.
 
- /Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Production/Develope/1Game Engine
+![Your Brain on VR] /Users/joemecca/Documents/website-text-/Pages/1Solutions/2Services/2Production/Develope/1Game Engine
+
+Game Engines enable comprehensive developmenwith all the features of the internet from collaboration to payment, in 3D.
 
 
+*** Program examples:
+ 
+**** Virtual World Build
+
+text descrion (Technical, metaphysical, benefit)
+
+**** Infinte Walker
+
+**** XR Color
+
+**** XR Music
+
+** KK 1 sentence description 
+- for all four programs
+- 10 work max
+- text descrion (Technical, metaphysical, benefit)
 
 
-
-By developing your project in with a game engine we will quickly design the virtual environment and scene 
-
-
-This also makes it easier to port games to multiple platforms.
-
-
-*** What is the Technology
-
-
-*** How it is integrated into XR
-
-*** Why that makes you money
-
-
-
-Artificial intelligence in VR
 
 * Artificial intelligence
 
